--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,7 +1,10 @@
 .list {
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 20px;
   width: 100%;
   margin-top: 40px;
+  margin-bottom: 40px;
 }
